--- a/Esberitoks/index_ru.html
+++ b/Esberitoks/index_ru.html
@@ -136,9 +136,10 @@
         <p>Усиливает выработку антител<br>против вирусов и бактерий</p>
         <button class="accordion">Подробнее</button>
         <div class="panel">
-          <p>БАПТИЗИЯ красильная является звездой среди целебных растений благодаря уникальной способности активировать Влимфоциты и увеличивать образование антител<sup>1</sup> против возбудителей как вирусных, так и бактериальных инфекций.<br> <b>Это уменьшает риск развития осложнений и помогает реже болеть<sup>2</sup>.</b><br>
-            1Classen B., Thude S., Blaschek W., Wack M., Bodinet C., 2006
-            2Юрцева А.П., Фофанова Е.В., Боднар О.П., 2014
+          <p>БАПТИЗИЯ красильная является звездой среди целебных растений благодаря уникальной способности активировать В-лимфоциты и увеличивать образование антител<sup>1</sup> против возбудителей как вирусных, так и бактериальных инфекций.<br> <b>Это уменьшает риск развития осложнений и помогает реже болеть<sup>2</sup>.</b><br>
+            <sup>1</sup> Classen B. et al., 2006
+            <sup>2</sup> Юрцева А.П., Фофанова Е.В., Боднар
+            О.П., 2014
           </p>
         </div>
       </div>
@@ -148,10 +149,10 @@
         <p>Активизирует экстренную иммунную<br>защиту</p>
         <button class="accordion">Подробнее</button>
         <div class="panel">
-          <p>ЕХИНАЦЕЯ пурпурная и Эхинацея паллида уже давно получили признание как эффективные растительные средства для лечения простуды и ОРВИ в США и странах Европы. Во время атаки вирусов они обеспечивают быстрое реагирование клеток первой линии иммунной защиты - макрофагов<sup>1</sup> и натуральных киллеров<sup>2</sup> на проникновение инфекционных агентов.<br> <b>Быстрый ответ иммунной системы ускоряет выздоравление<sup>3</sup>.</b><br>
-            1Fu A. et al., 2017
-            2See D.M., Broumand N., Sahl  L., Tilles J.G., 1997
-            3Henneicke-von Zepelin H., Hentschel C, Schnitker J., Kohnen R., Kohler G., Wustenberg P., 1999
+          <p>ЭХИНАЦЕЯ пурпурная и Эхинацея паллида уже давно получили признание как эффективные растительные средства для лечения простуды и ОРВИ в США и странах Европы. Во время атаки вирусов они обеспечивают быстрое реагирование клеток первой линии иммунной защиты - макрофагов<sup>1</sup> и натуральных киллеров<sup>2</sup> на проникновение инфекционных агентов.<br> <b>Быстрый ответ иммунной системы ускоряет выздоровление<sup>3</sup>.</b><br>
+            <sup>1</sup>Fu A. et al., 2017
+            <sup>2</sup>See D.M. et al., 1997
+            <sup>3</sup>Henneicke-von Zepelin H. et al., 1999
           </p>
         </div>
       </div>
@@ -162,9 +163,9 @@
         <button class="accordion">Подробнее</button>
         <div class="panel">
           <p>Туя западная известна своими противовирусными свойствами, и входит в состав лекарств против заболеваний, вызванных вирусом папилломы человека<sup>1</sup>. Экстракт Туи обладает способностью активировать Т-лимфоциты<sup>2</sup>, от которых зависит сила и направленность иммунного ответа в случае инфекции.<br> <b>Как следствие - заболевание протекает легче, а выздоровление наступает быстрее<sup>3</sup>.</b><br>
-            1Alves L.D.S. et al., 2014
-            2Gohla S.H, Haubeck HD, Schrum S, Soltau H, Neth RD. Activation of CD4-positive T cells by polysaccharide fractions isolated from the Cupressaceae Thuja occidentalis L. (Arborvitae). J Allergy Clin Immunol 1986;77:268–72.
-            3Henneicke-von Zepelin H. et al., 2019
+            <sup>1</sup>Alves L. D. S. et al., 2014
+            <sup>2</sup>Gohla S. H. et al., 1986
+            <sup>3</sup>Henneicke-von Zepelin H. et al., 2019
           </p>
         </div>
       </div>
