--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -347,7 +347,7 @@
                 <p>Ko tikėtis naujame 2020 metų sezone?</p>
 
               </div>
-              <button class="accordion">detailed</button>
+              <button class="accordion">plačiau</button>
               <div class="panel">
                 <p>Remiantis PSO skaičiavimais, naują epidemijos sezoną Šiaurės pusrutulyje cirkuliuos tokie gripo virusai:</p>
                 <ul>
@@ -391,7 +391,7 @@
               <div class="block-6__container-text"><p>
                 Deja, neįmanoma visiškai apsaugoti vaiko nuo peršalimo ligų. Ypač kai kiekvieną dieną jūsų vaiką supa bendraamžiai. Pakanka, kad vienas vaikas darželyje ar mokykloje susirgtų ir infekcija greitai plinta toliau. Susirgus vaikui labai dažnai vienam iš tėvų tenka naudotis nedarbingumu. Ir čia kyla klausimų: “Kaip greitai išgyti peršalimą? Koks yra geriausias vaistas nuo peršalimo? Ar galima greitai pasveikti nuo peršalimo? Ką daryti, kad vaikui peršalimas pasitaikytų kuo rečiau ir praeitų lengviau?</p>
               </div>
-              <button class="accordion">detailed</button>
+              <button class="accordion">plačiau</button>
               <div class="panel">
                 <p>Dažniausiai vaikai peršalimo ligomis serga nuo šešių mėnesių iki 12 metų, nes šiuo laikotarpiu formuojasi imuninė sistema. Norint veiksmingai gydyti vaikų peršalimą, reikia nedelsiant reaguoti į pirmuosius požymius:</p>
 
