--- a/Tansilotren-Li/index.html
+++ b/Tansilotren-Li/index.html
@@ -501,7 +501,7 @@
             <div class="apt-container">
                 <a target="_blank" href="https://www.gintarine.lt/tonsilotren-tabletes-n40"></a>
                 <a target="_blank" href="https://www.nvaistine.lt/tonsilotren-tabletes-n40"></a>
-                <a target="_blank" href=""></a>
+                <a target="_blank" href="https://www.benu.lt/dideles-nuolaidos-mazos-kainos/tonsilotren-125-mg10-mg50-mg5-mg25-mg-tabletes-n40"></a>
             </div>
             <div class="map-text">
                 <h3>Įrodymai</h3>
