--- a/influcid-Georgia/index.html
+++ b/influcid-Georgia/index.html
@@ -39,7 +39,7 @@
                 <li><a class="navmenu" href="#block-3" >შემადგენლობა</a></li>
                 <li><a class="navmenu" href="#block-4" >როგორ გამოვიყენოთ</a></li>
 <!--                <li><a class="where-to-buy" href="#block-5" >Где купить</a></li>-->
-                <!-- <li><a href="index.html" >en</a></li> -->
+                <li><a href="index-ru.html" >ru</a></li>
               </ul>
             </div>
           </div>
@@ -49,7 +49,7 @@
               <a class="navmenu" href="#block-3" >შემადგენლობა</a>
               <a class="navmenu" href="#block-4" >როგორ გამოვიყენოთ</a>
 <!--              <a class="where-to-buy" href="#block-5" >სად შეიძლება შეძენა</a>-->
-            <!-- <a href="index.html" >en</a> -->
+            <a href="index-ru.html" >ru</a>
           </div>
           <a class="instruction" href="./instruction.pdf"
           ><p class="translated-text" key="instruction">ანოტაცია</p></a
