--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			<a href="Tansilotren-Moldova/index.html">Tansilotren-Moldova</a>
 			<a href="influcid-LT/index.html">influcid-LT</a>
 			<a href="Tansilotren-Li/index.html">Tansilotren-Li</a>
+			<a href="SwissPharm/index.html">SwissPharm</a>
 			
 		</section>
 	</main>
@@ -208,6 +209,10 @@
 	}
 	a:nth-child(41)::before {
 		background: url("./Tansilotren-Li/bg.png")no-repeat center / cover;
+	}
+	a:nth-child(42)::before {
+		background: url("./Tansilotren-Li/bg.png")no-repeat center / cover;
+		display: none;
 	}
 </style>
 
