--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -32,7 +32,8 @@
                     <a class="navmenu" href="#block-3">Contact Us </a>
                 </div>
                 <div class="navigation-lang">
-                    <a class="lang lang-dop"><b>eng</b></a><span>|</span><a class="lang" href=""><p>deu</p></a><span>|</span><a class="lang" href=""><p>fas</p></a>
+                    <a class="lang lang-dop"><b>eng</b></a>
+<!--                    <span>|</span><a class="lang" href=""><p>deu</p></a><span>|</span><a class="lang" href=""><p>fas</p></a>-->
                 </div>
 
                 <!--        mobile menu-->
