--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -85,8 +85,8 @@
             </div>
         </div>
         <div class="mob-img-cont">
-            <div class="mobile-image"></div>
-            <div class="mobile-image2"></div>
+<!--            <div class="mobile-image"></div>-->
+<!--            <div class="mobile-image2"></div>-->
         </div>
         <div class="header-title">
             <p class="header-title_main">Swiss<br>Pharmaceutical</p>
