--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -7,11 +7,11 @@
     <link rel="shortcut icon" href="./images/" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
-<!--    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>-->
-<!--    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 </head>
 <body>
 
@@ -103,13 +103,18 @@
 <a name="block-1"></a>
 
     <div class="block-1">
+        <div class="nav-block_black nav-block_black1 none">
+            <a class="nav-active" href="#block-1">Services</a><br>
+            <a href="#block-2">Advantages</a><br>
+            <a href="#block-3">Contact Us</a>
+        </div>
         <div class="block-header">
             <div class="nav-block_black">
                 <a class="nav-active" href="#block-1">Services</a><br>
                 <a href="#block-2">Advantages</a><br>
                 <a href="#block-3">Contact Us</a>
             </div>
-            <h1>360° accompanying support:</h1>
+            <h1 class="block-1_h1">360° accompanying support:</h1>
         </div>
 
         <div class="plate-container">
@@ -172,7 +177,7 @@
 
             <div class="line"></div>
 
-            <h2>Business<br>consulting</h2>
+            <h2 class="block-1_h2">Business<br>consulting</h2>
 
             <ul>
                 <li>Evaluation of investment attractiveness of pharmaceutical markets, determination of potential perspective segments, products and technologies for growing and business development</li>
@@ -189,13 +194,18 @@
 <a name="block-2"></a>
     <div class="block-2_outer">
         <div class="block-2">
+            <div class="nav-block_white nav-block_white1 none">
+                <a href="#block-1">Services</a>
+                <a class="nav-active" href="#block-2">Advantages</a>
+                <a href="#block-3">Contact Us</a>
+            </div>
             <div class="block-header">
                 <div class="nav-block_white">
                     <a href="#block-1">Services</a>
                     <a class="nav-active" href="#block-2">Advantages</a>
                     <a href="#block-3">Contact Us</a>
                 </div>
-                <h1>Advantages of co-operation</h1>
+                <h1 class="block-2_h1">Advantages of co-operation</h1>
             </div>
             <div class="plate-container">
                 <div class="plate plate-transparent">
@@ -241,12 +251,17 @@
 <a name="block-3"></a>
      <div class="block-3">
          <div class="block-header">
+             <div class="nav-block_black nav-block_black2 none">
+                 <a href="#block-1">Services</a>
+                 <a href="#block-2">Advantages</a>
+                 <a class="nav-active" href="#block-3">Contact Us</a>
+             </div>
              <div class="nav-block_black">
                  <a href="#block-1">Services</a>
                  <a href="#block-2">Advantages</a>
                  <a class="nav-active" href="#block-3">Contact Us</a>
              </div>
-            <h1>Contact form</h1>
+            <h1 class="block-3_h1">Contact form</h1>
          </div>
          <div class="content-container" >
              <form action="/send.php" method="POST">
