--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
 		background: url("./Tansilotren-Li/bg.png")no-repeat center / cover;
 	}
 	a:nth-child(42)::before {
-		background: url("./Tansilotren-Li/bg.png")no-repeat center / cover;
-		display: none;
+		background: url("./SwissPharm/logo.svg")no-repeat center / contain;
 	}
 </style>
 
