--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="description" content="swiss pharm"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="shortcut icon" href="./images/" type="image/png"/>
+    <link rel="shortcut icon" href="./images/1.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
