--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -67,16 +67,16 @@
             <a class="logo-container" href="#top"></a>
             <p class="strange-lang">en</p>
             <div id="menuToggle">
-                <input type="checkbox" /> <span></span> <span></span> <span></span>
+                <input class="this-inpt" type="checkbox" /> <span></span> <span></span> <span></span>
                 <ul id="menu">
                     <li>
-                        <a class="input-li" type="checkbox"/><a class="navmenu menuLi" href="#block-1" >Services</a>
+                        <a class="input-li" type="checkbox"/><a class="navmenu menuLi menuLi1" href="#block-1" >Services</a>
                     </li>
                     <li>
-                        <a class="navmenu menuLi" href="#block-2">Advantages</a>
+                        <a class="navmenu menuLi menuLi2" href="#block-2">Advantages</a>
                     </li>
                     <li>
-                        <a class="navmenu menuLi" href="#block-3">Contact Us </a>
+                        <a class="navmenu menuLi menuLi3" href="#block-3">Contact Us </a>
                     </li>
                     <!--                        <li>-->
                     <!--                            <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>-->
