--- a/SwissPharm/index.html
+++ b/SwissPharm/index.html
@@ -70,7 +70,7 @@
                 <input class="this-inpt" type="checkbox" /> <span></span> <span></span> <span></span>
                 <ul id="menu">
                     <li>
-                        <a class="input-li" type="checkbox"/><a class="navmenu menuLi menuLi1" href="#block-1" >Services</a>
+                        <a class="input-li" type="checkbox"/><a id="elem" class="navmenu menuLi menuLi1" href="#block-1" >Services</a>
                     </li>
                     <li>
                         <a class="navmenu menuLi menuLi2" href="#block-2">Advantages</a>
