--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -2,10 +2,9 @@
 <html lang="ua">
 <head>
     <meta charset="utf-8"/>
-    <a class="logo"></a>
-    <meta name="description" content="gastritol"/>
+    <meta name="description" content="prospan"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="shortcut icon" href="./images/" type="image/png"/>
+    <link rel="shortcut icon" href="./images/logo_pluw 2.png" type="image/png"/>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/script.js"></script>
 <!--    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>-->
@@ -23,14 +22,13 @@
             <a class="logo-container" href="#top"></a>
             <a class="where-to-buy-mob" href="#block-6">ДЕ КУПИТИ</a>
             <div class="navigation-menu">
-                <a class="navmenu" href="#block-1" >Переваги</a>
-                <a class="navmenu" href="#block-2">Показання</a>
-                <a class="navmenu" href="#block-3">Склад</a>
-                <a class="navmenu" href="#block-4">Як приймати</a>
-                <a class="navmenu" href="#block-5">Поради</a>
+                <a class="navmenu" href="#block-1" >Преимущества</a>
+                <a class="navmenu" href="#block-2">Состав и действие</a>
+                <a class="navmenu" href="#block-3">Как принимать</a>
+                <a class="navmenu" href="#block-4">Полезная информация</a>
 
                 <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ</a>
-<!--                <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>-->
+                <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-ru.html"><p>EN</p></a>
             </div>
 
             <!--        mobile menu-->
@@ -41,28 +39,25 @@
                     <ul id="menu">
                         <li>
 
-                            <input class="input-li" type="checkbox"/><a class="navmenu menuLi" href="#block-1" >Переваги
+                            <input class="input-li" type="checkbox"/><a class="navmenu menuLi" href="#block-1" >Преимущества
 
                             </a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-2">Показання</a>
+                            <a class="navmenu menuLi" href="#block-2">Состав и действие</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-3">Склад</a>
+                            <a class="navmenu menuLi" href="#block-3">Как принимать</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-4">Як приймати</a>
+                            <a class="navmenu menuLi" href="#block-4">Полезная информация</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi" href="#block-5">Поради</a>
+                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>
                         </li>
-<!--                        <li>-->
-<!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>-->
-<!--                        </li>-->
+                        <li>
+                            <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index-ru.html"><p>EN</p></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -72,17 +67,20 @@
         </div>
     </div>
 
-<a target="_blank" class="instruction" href="./instruction.pdf">
-            <p class="translated-text" key="instruction">Інструкція</p>
-      </a>
+    <div class="instr-outer">
+        <div class="instr-inner">
+            <a target="_blank" class="instruction" href="./instruction.pdf">
+                <p class="translated-text" key="instruction">Инструкция</p>
+            </a>
+        </div>
+    </div>
+
 
 <!--    end navigation-->
 
     <div class="header-custom">
             <div class="header-title">
-                <p>А як виглядає твій гастрит?</p>
-                <div class="header-title_product"></div>
-                <p class="header-title_subtext"><b>Гастритол</b> - не носи<br>з собою гастрит</p>
+
             </div>
     </div>
 
