--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -78,10 +78,61 @@
 
 <!--    end navigation-->
 
-    <div class="header-custom">
-            <div class="header-title">
-
+    <div class="header-block_outer">
+        <div class="header-block_inner">
+            <div class="header-block_content">
+                <h1>Cила природы<br> против кашля</h1>
+                <div class="header-block_img">
+                    <div class="header-block_img-germ"></div>
+                </div>
             </div>
+        </div>
+    </div>
+
+    <div class="block-1_outer">
+        <div class="block-1_inner">
+            <h2>ПРЕИМУЩЕСТВА</h2>
+            <div class="block-1_text">
+                <p>При любом виде кашля</p>
+
+                <p>Для взрослых и детей от двух лет</p>
+
+                <p>Растительный состав</p>
+
+                <p>Не содержит красителей и сахара</p>
+
+                <p>Выпускается во флаконах с инновационным дозатором</p>
+
+                <p>Признан одним из наиболее надежных препаратов от кашля в Германии*</p>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="block-2_outer">
+        <div class="block-2_inner">
+            <h2>СОСТАВ И ДЕЙСТВИЕ</h2>
+            <p>Оригинальный стандартизированный сухой экстракт листье<br>в плюща EA 575®, оказывающий комплексное действие при всех видах кашля</p>
+        </div>
+    </div>
+
+    <div class="block-3_outer">
+        <div class="block-3_inner">
+            <div class="block-3_text">
+                <p>Разжижает<br>
+                    и выводит слизь</p>
+                <p>Расширяет<br>бронхи</p>
+                <p>Облегчает<br>кашель</p>
+                <p>Снимает<br>воспаление</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="block-4_outer">
+        <div class="block-4_inner">
+
+        </div>
     </div>
 
 
@@ -125,7 +176,7 @@
 
 
         <div class="map-text">
-            <p><b>Гастритол</b> можна знайти<br> в аптеці поблизу</p>
+            <p></p>
         </div>
     <div class="disclamer-tra__inner">
         <div class="logo-block">
