--- a/Tansilotren-Li/index.html
+++ b/Tansilotren-Li/index.html
@@ -104,7 +104,7 @@
             <a  name="block-1"></a>
         </div>
     </div>
-    <h2 class='block-4-h2' >5 natūralios veikliosios<br><b>medžiagos ryklės uždegimo sukeltų negalavimų lengvinimui</b></h2>
+    <h2 class='block-4-h2' >5 NATŪRALIOS VEIKLIOSIOS MEDŽIAGOS<br><b>ryklės uždegimo sukeltų negalavimų lengvinimui</b></h2>
     <div class="block-4__container">
         <div class="block-interactive-inner">
             <div class="block-interactive-inner__img"></div>
@@ -178,7 +178,7 @@
 
                             <p><b>Esant lėtinei pasikartojančiai ligos eigai: </b>
                                 po 1 tabletę 3 kartus per dieną
-                                6 - 8 savaites
+                                6 - 8 savaites<br>
                                 Veiksmingi pakartotiniai keli gydymo kursai per metus</p>
 
                             <p>Tabletes vartokite 30 minučių prieš valgį arba 30 minučių po valgio, leiskite lėtai ištirpti burnoje.</p>
@@ -210,7 +210,7 @@
 
                             <p><b>Esant lėtinei pasikartojančiai ligos eigai:</b>
                                 po 1 tabletę 3 kartus per dieną
-                                6 - 8 savaites
+                                6 - 8 savaites<br>
                                 Veiksmingi pakartotiniai keli gydymo kursai per metus
                             </p>
                             <p>Tabletes vartokite 30 minučių prieš valgį arba 30 minučių po valgio, leiskite lėtai ištirpti burnoje.</p>
