--- a/Tansilotren-AZ/index.html
+++ b/Tansilotren-AZ/index.html
@@ -72,7 +72,7 @@
                 <div class="header-main-img-mobile"></div>
                 <div class="header-main-product-img-mobile"></div>
                 <div class="header-main-center">
-                    <p>İltihabı və boğaz ağrısını götürür¹</p>
+                    <p>Boğaz ağrısını və İltihabı aradan qaldırır</p>
                     <p><b>Badamcıq vəzilərinin qoruyucu <br>funksiyasını bərpa edir² ³</b></p>
                     <p>Anginanın yenidən inkişaf etməsi riskini<br>və antibiotiklərin qəbuluna olan <br> ehtiyacı azaldır²</p>
                     <!-- <p>Базисная терапия<br> при хроническом тонзиллите⁴</p> -->
@@ -88,7 +88,7 @@
     </div>
     <div class="block-2__plate">
         <p>Xroniki tonzillitin
-            <br>müalicəsində №1 <sup>4</sup></p>
+            <br>müalicəsində №1<sup>4</sup></p>
     </div>
     <div class="block-2__plate">
         <p>Təbii
@@ -343,7 +343,7 @@
 
                 <p>TONZİLOTREN udlağın virus mənşəli və bakteriya mənşəli infeksion xəstəliklərinin müxtəlif mərhələlərində iltihabı götürən və orqanizmin öz qoruyucu mexanizmlərini stimullaşdıran, eləcə də xəstəlik nəticəsində böyümüş badamcıq vəzilərinin kiçilməsinə kömək edən 5 aktiv təbii tərkib hissəsinin kombinasiyasıdır. Tonzilotren badamcıq vəzilərinə təsir edərək onların iltihabını götürür və qoruyucu funksiyasını bərpa edir ki, bu da təkrar angina təsadüflərinin sayını və onların meydana gəlmə riskini, habelə antibiotiklərin qəbuluna olan ehtiyacı azaldır<sup>1</sup>.</p>
 
-                <p>Preparatdan anginanın həm müalicəsi, həm də profilaktikası məqsədi ilə istifadə etmək olar. 3 yaşdan böyük uşaqlar və böyüklər qəbul edə bilər. Xəstədə tez-tez anginanın inkişaf etməsinə meyillilik olarsa Tonzilotren preparatı ilə bir il ərzində bir neçə kurs müalicə aparılması insanın immun sisteminin mühüm ünsürləri olan badamcıq vəzilərinin qorunub saxlanmasına kömək edə bilər. Müalicə kursu: 1 həb, gündə 3 dəfə 6-8 həftə</p>
+                <p>Preparatdan anginanın həm müalicəsi, həm də profilaktikası məqsədi ilə istifadə etmək olar. 3 yaşdan yuxarı uşaqlar və böyüklər qəbul edə bilər. Xəstədə tez-tez anginanın inkişaf etməsinə meyillilik olarsa Tonzilotren preparatı ilə bir il ərzində bir neçə kurs müalicə aparılması insanın immun sisteminin mühüm ünsürləri olan badamcıq vəzilərinin qorunub saxlanmasına kömək edə bilər. Müalicə kursu: 1 həb, gündə 3 dəfə 6-8 həftə</p>
 
                 <p><b>Tonzilotren — anginanın təhlükəsiz müalicəsi və profilaktikası  Qoy sizin badamcıq vəzilərinizin heç vaxt xroniki tonzilitin nə olduğunu bilməsin.</b></p>
                 <p>1. Jürgen Palma et all. «Effectiveness of an add-on treatment with the homeopathic medication SilAtro-5-90 in recurrent tonsillitis: An international, pragmatic, randomized, controlled clinical trial» // Complementary Therapies in Clinical Practice Volume 28, August 2017, Pages 181-191.</p>
@@ -359,7 +359,7 @@
                 <p><b>1935-ci ildən Almaniyada istehsal olunur.</b>
 
                     Həbi udmağa ehtiyac yoxdur. O, xoş dada malikdir və asanca həll olaraq ağız boşluğunda əriyir.
-                    3 yaşa qədər uşaqların müalicəsində həbi kiçik həcmdə suda (məsələn, bir çay qaşığı qədər) həll etmək tövsiyə olunur.
+                    3  yaşlı uşaqların müalicəsində həbi kiçik həcmdə suda (məsələn, bir çay qaşığı qədər) həll etmək tövsiyə olunur.
                     Preparatı istənilən yerdə və günün istənilən saatında qəbul etmək olar. Ancaq yadda saxlayın ki, Tonzilotren preparatı qida və ya içki qəbulundan ən az 30 dəqiqə əvvəl ya da sonra qəbul olunmalıdır.
                     Anginanın ilk əlamətlərini aşkar etdikdə dərhal Tonzilotreni qəbul etməyə başlamalısınız.
                     Tonzilotren badamcıq vəzilərinin strukturunun və qoruyucu funksiyasının bərpasına kömək edir.</p>
@@ -375,7 +375,7 @@
                 <p><b>1935-ci ildən Almaniyada istehsal olunur.</b>
 
                     Həbi udmağa ehtiyac yoxdur. O, xoş dada malikdir və asanca həll olaraq ağız boşluğunda əriyir.
-                    3 yaşa qədər uşaqların müalicəsində həbi kiçik həcmdə suda (məsələn, bir çay qaşığı qədər) həll etmək tövsiyə olunur.
+                    3  yaşlı uşaqların müalicəsində həbi kiçik həcmdə suda (məsələn, bir çay qaşığı qədər) həll etmək tövsiyə olunur.
                     Preparatı istənilən yerdə və günün istənilən saatında qəbul etmək olar. Ancaq yadda saxlayın ki, Tonzilotren preparatı qida və ya içki qəbulundan ən az 30 dəqiqə əvvəl ya da sonra qəbul olunmalıdır.
                     Anginanın ilk əlamətlərini aşkar etdikdə dərhal Tonzilotreni qəbul etməyə başlamalısınız.
                     Tonzilotren badamcıq vəzilərinin strukturunun və qoruyucu funksiyasının bərpasına kömək edir.</p>
@@ -545,7 +545,15 @@
 
         <h1>HARADAN ALMAQ OLAR?</h1>
 
-        <div class="block-7__img"></div>
+        <!-- <div class="block-7__img"></div> -->
+        <div class="apt-container">
+                <a target="_blank" href="https://www.aptekonline.az/"></a>
+                <a target="_blank" href="http://www.zeferan.az/"></a>
+                <a target="_blank" href="https://aptekstore.az/"></a>
+              
+                <a target="_blank" href="https://www.ozonaptek.az/"></a>
+                <a target="_blank" href="https://www.melhem.az/"></a>
+              </div>
         <div class="map-text">
             <h3>Sübut bazası</h3>
             <ol>
