--- a/prospan-new/index.html
+++ b/prospan-new/index.html
@@ -131,7 +131,41 @@
 
     <div class="block-4_outer">
         <div class="block-4_inner">
-
+            <h2>КАК ПРИНИМАТЬ</h2>
+            <div class="toggle-btn_container">
+                <div class="toggle-btn sirop-btn"><p>СИРОП</p></div>
+                <div class="toggle-btn drops-btn active-btn"><p>КАПЛИ</p></div>
+            </div>
+            <div class="plate-container">
+                <div class="plate">
+                    <div class="plate-img"></div>
+                    <p class="img-text">Детям от 2 лет</p>
+                    <div class="plate-content">
+                        <h4>СУТОЧНАЯ ДОЗА</h4>
+                        <p class="sirop-text">33 капли<br>По 11 капель 3 раза в сутки</p>
+                        <p class="drops-text">5 мл сиропа<br>По 2,5 мл сиропа 2 раза в сутки</p>
+                    </div>
+                </div>
+                <div class="plate">
+                    <div class="plate-img"></div>
+                    <p class="img-text">Детям от 6 лет до 12 лет<br></p>
+                    <div class="plate-content">
+                        <h4>СУТОЧНАЯ ДОЗА</h4>
+                        <p class="sirop-text">48 капель<br>По 16 капель 3 раза в сутки</p>
+                        <p class="drops-text">10 мл сиропа<br>По 5 мл сиропа 2 раза в сутки</p>
+                    </div>
+                </div>
+                <div class="plate">
+                    <div class="plate-img"></div>
+                    <p class="img-text">Детям старше 12 лет<br>и взрослым</p>
+                    <div class="plate-content">
+                        <h4>СУТОЧНАЯ ДОЗА</h4>
+                        <p class="sirop-text">72 капли<br>По 24 капли 3 раза в сутки</p>
+                        <p class="drops-text">10 мл сиропа<br>По 5 мл сиропа 3 раза в сутки</p>
+                    </div>
+                </div>
+            </div>
+            <p class="block-4_inner-text">1 мл  = 29 капель препарата. Капли следует принимать перед приемом пищи.<br>Допускается принимать капли с небольшим количеством воды.<br>Взбалтывайте флакон перед каждым применением.</p>
         </div>
     </div>
 
